<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="languagecode">
    <string name="activity_title_address_add">地址添加</string>
    <string name="activity_title_address_edit">地址编辑</string>
    <string name="address_username_left">收货人</string>
    <string name="address_username_input_tip">输入收货人姓名</string>
    <string name="address_userphone_left">手机号</string>
    <string name="address_userphone_input_tip">输入收货人手机号</string>
    <string name="address_userarea_left">选择地区</string>
    <string name="address_userarea_tip">选择收货人所在地区</string>
    <string name="address_userarea_input_tip">省\t\t\t\t\t市\t\t\t\t\t县</string>
    <string name="address_useraddress_left">详细地址</string>
    <string name="address_useraddress_tip">输入收货人详细地址</string>
    <string name="address_useraddress_input_tip">地址请精确到门牌号</string>
    <string name="address_useraddress_default_left">设为默认地址</string>
    <string name="address_useraddress_default_tip">每次购物时会优先选定该地址，方便您轻松购物</string>
    <string name="address_useraddress_add_sure">确认添加</string>
    <string name="address_useraddress_edit_sure">确认修改</string>
    <string name="address_useraddress_delete_sure">删除地址</string>
    <string name="activity_title_address_manager">地址管理</string>
    <string name="activity_title_address_manager_menu">添加</string>
    <string name="activity_title_address_manager_edit">编辑</string>
    <string name="activity_title_advance_sale">公让宝预售</string>
    <string name="activity_title_advance_sale_start">MM月dd日开售</string>
    <string name="activity_title_apply_after_exchange">换货</string>
    <string name="activity_title_apply_after_refund">退货退款</string>
    <string name="activity_title_apply_refund">申请退款</string>
    <string name="activity_title_apply_result">申请提交</string>
    <string name="apply_result_tip_00">商家已收到您的退款申请</string>
    <string name="apply_result_tip_01">商家会尽快处理您的退款，如在7个工作日内未进行处理，款项将自动退还至您的付款账户</string>
    <string name="apply_result_tip_10">商家已收到您的退货退款申请</string>
    <string name="apply_result_tip_11">商家会尽快处理您的申请，如在7个工作日内未进行处理，请您及时联系在线客服</string>
    <string name="apply_result_tip_20">商家已收到您的资料已提交</string>
    <string name="apply_result_tip_21">商家会尽快审核您的资料，我们将在1个工作日内提审核您的资料，期间如有任何问题请联系客服处理</string>
    <string name="activity_title_apply_after_sale">申请方式</string>
    <string name="apply_after_sale_choose_refund">我要退货退款</string>
    <string name="apply_after_sale_choose_refund_tip">已收到货，需要退还已收到的货物</string>
    <string name="apply_after_sale_choose_exchange">我要换货</string>
    <string name="apply_after_sale_choose_exchange_tip">已收到货，需要更换已收到的货物</string>
    <string name="apply_after_exchange_title">换货原因</string>
    <string name="apply_after_exchange_specs">规格</string>
    <string name="apply_after_refund_reason">售后原因</string>
    <string name="apply_after_refund_reason_choose_tip">退款原因</string>
    <string name="apply_after_refund_reason_choose">请选择</string>
    <string name="apply_after_refund_refund_amount">退款金额</string>
    <string name="apply_after_refund_refund_amount_tip">退款金额：</string>
    <string name="apply_after_refund_reason_tip">请选择退款原因...</string>
    <string name="apply_after_refund_note">退款说明</string>
    <string name="apply_after_refund_note_0">(必填)</string>
    <string name="apply_after_refund_note_tip">请填写退款说明...</string>
    <string name="apply_after_refund_sure">确认申请</string>
    <string name="apply_after_refund_details_status_1">退货退款审核中...</string>
    <string name="apply_after_refund_details_status_2">退货退款已审核,等待退款...</string>
    <string name="apply_after_refund_details_status_3">退货退款中...</string>
    <string name="apply_after_refund_details_status_5">退货退款已完成</string>
    <string name="apply_after_exchange_details_reason">退款原因：%s</string>
    <string name="apply_after_exchange_details_notpass">您的售后申请审核未通过</string>
    <string name="apply_after_exchange_details_notpass_tip">·申请原因描述不符，有疑问请咨询客服</string>
    <string name="apply_after_sales_number">售后编号：%s</string>
    <string name="apply_after_exchange_details_status_1">换货审核中...</string>
    <string name="apply_after_exchange_details_status_2">换货已审核,等待换货...</string>
    <string name="apply_after_exchange_details_status_4">换货中...</string>
    <string name="apply_after_exchange_details_status_5">换货已完成</string>
    <string name="apply_after_exchange_details_info">换货信息</string>
    <string name="apply_after_exchange_details_specs">原有：%s</string>
    <string name="apply_after_exchange_details_specs_ex">换成：%s</string>
    <string name="apply_after_exchange_details_num">换货数量：%d件</string>
    <string name="apply_after_exchange_details_reason_ex">换货原因：%s</string>
    <string name="apply_after_exchange_details_audit_time">审核时间：%s</string>
    <string name="apply_refund_details_status_1">您已发起退款申请，请耐心等待平台处理...</string>
    <string name="apply_refund_details_status_2">您发起的退款申请已审核，请耐心等待平台处理...</string>
    <string name="apply_refund_details_status_3">平台退款中，请注意您的支付账户...</string>
    <string name="apply_refund_details_status_5">平台退款成功，退款受理结束</string>
    <string name="apply_refund_details_status_11">·平台在7日之内未对进行审核，请及时联系客服处理\n·若平台拒绝您的申请，您可联系客服咨询</string>
    <string name="apply_refund_details_status_21">·平台在7日之内未对进行审核，请及时联系客服处理\n·若平台拒绝您的申请，您可联系客服咨询</string>
    <string name="apply_refund_details_status_31">·平台退款至您的原支付账户，请注意您的支付账户</string>
    <string name="apply_refund_details_status_51">·款项已退至您的付款账户，请注意查收</string>
    <string name="apply_refund_details_apply_time">申请时间：%s</string>
    <string name="apply_refund_details_completion_time">完成时间：%s</string>
    <string name="permission_ondenied">请授予应用使用权限！</string>
    <string name="permission_location_ondenied">尚未开启位置定位服务</string>
    <string name="open_activity_error_option">参数错误，查看失败！</string>
    <string name="open_activity_apply_after_error_option">参数错误，申请退款失败！</string>
    <string name="open_activity_payment_order_error_option">支付订单参数错误,请重试...</string>
    <string name="payment_order_error_payment">请选择支付方式...</string>
    <string name="payment_order_error_addr">请选择收货地址...</string>
    <string name="open_activity_apply_after_exchange_">"换货"功能暂未开放,敬请期待......</string>
    <string name="search_input_empty">什么都没有^^^请先输入！</string>
    <string name="order_view_empty">您还没有订单哦</string>
    <string name="apply_after_status_0">待审核</string>
    <string name="apply_after_status_1">已审核</string>
    <string name="apply_after_status_2">换货中</string>
    <string name="apply_after_status_21">退款中</string>
    <string name="apply_after_status_3">已完成</string>
    <string name="activity_title_binding_alipay">绑定支付宝</string>
    <string name="binding_alipay_tip">支付宝账号</string>
    <string name="binding_alipay_tip_input">请输入您的支付宝账号</string>
    <string name="activity_title_binding_cloud_flash">绑定云闪付</string>
    <string name="binding_cloud_flash_tip">云闪付账号</string>
    <string name="binding_cloud_flash_tip_input">请输入您的云闪付账号</string>
    <string name="activity_title_cloud_warehouse">云仓库</string>
    <string name="activity_title_cloud_warehouse_record">提货记录</string>
    <string name="order_view_num">订单号：%s</string>
    <string name="cloud_warehouse_record_num">提货数量：%d</string>
    <string name="cloud_warehouse_record_num_tip">提货数量：</string>
    <string name="cloud_warehouse_dialog_title">选择提货数量</string>
    <string name="cloud_warehouse_record_freight_tip">提货运费：</string>
    <string name="cloud_warehouse_record_status_0">待提货</string>
    <string name="cloud_warehouse_record_status_1">提货成功</string>
    <string name="activity_title_flash_sale">限时抢购</string>
    <string name="activity_title_payment_orders">支付订单</string>
    <string name="activity_title_settlement">结算</string>
    <string name="activity_title_product_evaluation">评价</string>
    <string name="activity_title_product_evaluate_details">评价详情</string>
    <string name="activity_title_convention_centre">会议中心</string>
    <string name="convention_centre_time">活动时间：%s</string>
    <string name="convention_centre_addr">地址：%s</string>
    <string name="convention_centre_tel">电话：%s</string>
    <string name="activity_title_setting">设置</string>
    <string name="activity_title_setting_personal">个人资料</string>
    <string name="activity_title_setting_personal_nick">修改昵称</string>
    <string name="activity_title_setting_accounts_security">安全中心</string>
    <string name="activity_title_binding_bank_cards">绑定银行卡</string>
    <string name="activity_title_choose_bank_card">选择银行卡</string>
    <string name="flash_sale_tip">好价！好货！限时抢！</string>
    <string name="activity_title_luck_draw">GRB抽奖</string>
    <string name="activity_title_luck_draw_mine">我的奖品</string>
    <string name="luck_draw_chance">您还有%d次抽奖机会</string>
    <string name="luck_draw_tip">%dGRB一次</string>
    <string name="luck_draw_regret_tip">很遗憾~您没有中奖哦~</string>
    <string name="luck_draw_chance_buy_tip">是否花费%dGRB抽取一次大奖？</string>
    <string name="luck_draw_chance_outof_tip">抽奖次数用完了...</string>
    <string name="luck_draw_mine_received">已领取</string>
    <string name="luck_draw_mine_provided">已发放</string>
    <string name="luck_draw_mine_receive_success">领取成功！我们将尽快给您发货！</string>
    <string name="luck_draw_mine_receive_dialog_title">请添加您的收货地址</string>
    <string name="luck_draw_mine_receive_dialog_name_tip">请输入姓名</string>
    <string name="luck_draw_mine_receive_dialog_phone_tip">手机</string>
    <string name="luck_draw_mine_receive_dialog_addr_tip">地址</string>
    <string name="luck_draw_mine_receive_dialog_addr_tip_1">请输入详细收货地址精准到门牌号</string>
    <string name="luck_draw_mine_receive_dialog_addr_tip_2">(请您务必填写正确的地址，并保证准确无误，若因地址错误等问题出现您未收到货物等情况，平台将不予处理。谢谢您的合作。)</string>
    <string name="luck_draw_mine_receive_dialog_addr_sure">确认收货地址</string>
    <string name="index_find_00">资讯</string>
    <string name="index_find_01">点击咨询查看公让宝实时咨询</string>
    <string name="index_find_10">会议</string>
    <string name="index_find_11">点击会议报名参加公让宝全国会议</string>
    <string name="index_find_20">消息</string>
    <string name="index_find_21">点击消息查看公让宝官方通知与公告</string>
    <string name="find_details_author">原创：%s</string>
    <string name="find_details_read">阅读：%d</string>
    <string name="flash_sale_status_0">已结束</string>
    <string name="flash_sale_status_1">距结束</string>
    <string name="flash_sale_status_2">即将开始</string>
    <string name="main_navi_0">首页</string>
    <string name="main_navi_1">发现</string>
    <string name="main_navi_2">游戏</string>
    <string name="main_navi_3">购物车</string>
    <string name="main_navi_4">我的</string>
    <string name="main_exit_app_tip">再按一次退出%s</string>
    <string name="activity_title_message_management">消息</string>
    <string name="personal_coupon_name">公让宝优惠券</string>
    <string name="personal_coupon_desc">金额满%s元使用</string>
    <string name="personal_coupon_date">有效期：%s - %s</string>
    <string name="personal_recharge_record_title_0">时间</string>
    <string name="personal_recharge_record_title_1">充值金额</string>
    <string name="personal_recharge_record_title_2">入账金额</string>
    <string name="personal_recharge_record_title_3">状态</string>
    <string name="realname_second_realname_name_tip">真实姓名</string>
    <string name="realname_second_realname_name_input_tip">填写与身份证一致的姓名</string>
    <string name="realname_second_realname_cardid_tip">身份证号</string>
    <string name="realname_second_realname_cardid_input_tip">输入您的18位身份证号</string>
    <string name="realname_second_realname_region_tip">区域信息</string>
    <string name="realname_second_realname_region_input_tip">选择与您身份一致的区域</string>
    <string name="realname_second_realname_phone_input_tip">填写您绑定的手机号码</string>
    <string name="realname_second_realname_tip">温馨提示：资料审核需要1个工作日，如有疑问请咨询平台客服处理。</string>
    <string name="realname_second_realname_sure">完成提交</string>
    <string name="total_top_text">¥%s</string>
    <string name="centre_active_signup_tip_phone_text">手机号码</string>
    <string name="password_verification_code_text">验证码</string>
    <string name="password_verification_code_action">获取验证码</string>
    <string name="password_verification_code_tip">请输入验证码</string>
</resources>