<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".ui.activity.RealnameSecondActivity">

    <include layout="@layout/widget_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/realname_second_realname_name_tip"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/realname_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/realname_second_realname_name_input_tip"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#999999"
                    android:textSize="12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/realname_second_realname_cardid_tip"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/realname_cardid_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                    android:hint="@string/realname_second_realname_cardid_input_tip"
                    android:inputType="number"
                    android:maxLength="18"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#666666"
                    android:textColorHint="#999999"
                    android:textSize="12sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/realname_region"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="@string/realname_second_realname_region_tip"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/realname_region_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/realname_second_realname_region_input_tip"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:textColor="#666666"
                    android:textColorHint="#999999"
                    android:textSize="12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/centre_active_signup_tip_phone_text"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/realname_phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:hint="@string/realname_second_realname_phone_input_tip"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#666666"
                    android:textColorHint="#999999"
                    android:textSize="12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/password_verification_code_text"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/realname_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:hint="@string/password_verification_code_tip"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#666666"
                    android:textColorHint="#999999"
                    android:textSize="12sp" />

                <FrameLayout
                    android:id="@+id/realname_verification_code_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/realname_verification_code_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:padding="8dp"
                        android:text="@string/password_verification_code_action"
                        android:textColor="#F53C5E"
                        android:textSize="13sp" />
                </FrameLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/realname_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="15dp"
                android:text="@string/realname_second_realname_tip"
                android:textColor="#999999"
                android:textSize="12sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/realname_sure"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#F53C5E"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="@string/realname_second_realname_sure"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>